# Arch-Guard

./: .pre-commit-config.yaml  MANIFEST.in  ORCHESTRATOR_LOG.md  README.md  VERIFICATION_TRANSCRIPT.md  coverage.xml  pyproject.toml  pyrightconfig.json  ruff.toml
github-action/: action.yml  example-workflow.yml
hooks/: install.py  pre-commit  pre-push
plans/: plan.md
src/archguard/: __main__.py  cli.py  types.py
src/archguard/analyzers/: base.py  dependency_graph.py
src/archguard/config/: schema.py
src/archguard/detectors/: circular_dependency.py  cyclomatic_complexity.py  god_class.py  layer_violation.py  magic_value.py  service_layer_bypass.py
src/archguard/formatters/: base.py
src/archguard/git/: integration.py
tests/integration/: test_cli.py
tests/unit/: test_analyzers.py  test_config.py  test_detectors.py  test_types.py
